kubernetes_30_days_intensive_plan/day03/frontend-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: frontend
spec:
  containers:
  - name: curl-container
    image: curlimages/curl
    command: [ "sleep", "3600" ]
